# openweather_etl_alexanderp

./: .gitignore  pyproject.toml  setup.py  setup.sh
.github/workflows/: deploy_terraform.yml
cloud_functions/: main.py
cloud_functions/geo_data/: main.py
cloud_functions/pollution_data/: main.py
cloud_functions/weather_data/: main.py
terraform/: backend.tf  bigQuery.tf  extract.tf  load.tf  variables.tf
